--- a/app/index-azure.html
+++ b/app/index-azure.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Welcome to Azure</h1>
-    <p>This is the customized Nginx page for Azure deployment.</p>
+    <p>This is the customized Nginx page for Azure deployment. change 1</p>
 </body>
 
 </html>
