--- a/app/index-aws.html
+++ b/app/index-aws.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Welcome to AWS</h1>
-    <p>This is the customized Nginx page for AWS deployment.</p>
+    <p>This is the customized Nginx page for AWS deployment. change 1</p>
 </body>
 
 </html>
