server change 1 deploy

--- a/app/index-azure.html
+++ b/app/index-azure.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Welcome to Azure</h1>
+    <h1>Welcome to Azure change 1</h1>
     <p>This is the customized Nginx page for Azure deployment.</p>
 </body>
 
