--- a/app/index-aws.html
+++ b/app/index-aws.html
@@ -7,7 +7,7 @@
 
 
 <body>
-    <h1>Welcome to AWS</h1>
+    <h1>Welcome to AWS change 1</h1>
     <p>This is the customized Nginx page for AWS deployment.</p>
 </body>
 
